@@ -1,4 +1,4 @@
 DIST decorator-3.0.1.tar.gz 151960 RMD160 b255fdce55f259aae0a1dd0edda9ba0d7570d2f2 SHA1 2753bede5d4bd158d2168f87244df289405356ef SHA256 d4294afdd740b8f32f2381450b4521c812ba5d8919b57f9abaeb5ea151e6d1f3
-EBUILD decorator-3.0.1.ebuild 938 RMD160 f4dd7c5da3368d58867a39cb93b04e94d3b269e5 SHA1 a2900737a0411c919af0777ecdbaa9109d199118 SHA256 d68d9ffc6ab8b0f93eaf580b6317300d45684c4c9f6935c5ec2ced99942fa60e
-MISC ChangeLog 1008 RMD160 186e958d0cf6f7c92fe526704b54e715f22408bd SHA1 7c0d54bd3414ad1a77a60939949c360866eb637a SHA256 36b33d8f13cbcf30820e5873ae865059e59abfadb6ab3bf63d1e9230e173d58a
+EBUILD decorator-3.0.1.ebuild 1174 RMD160 df546c470b8d80e726c768f04e02738db2a7d38d SHA1 3ec7f4a78ffa3c83e0bbb2efd330c332d6fc0aa7 SHA256 40fb02a8e60d6999fa3bc6fbe26da28b65c559095941184fa38bec5f62ddab2f
+MISC ChangeLog 1136 RMD160 488191002fe6ebd815a927763a25578707f4f775 SHA1 a87949e7ca085338a6f8f889d45b67fa160d6568 SHA256 2d4213b68664d269bd6970eaa9bf085e69696e7f40fa956060334dcd137753df
 MISC metadata.xml 466 RMD160 2e0aefd00364286b5fe33226ccddd5197bc0044c SHA1 1774085c42e131dbc6a320dcdd3465df18850096 SHA256 b41a98c8c1c4722d925be9c7d02be1eee04f72bc58c14cda63346c4b40e7e277
