@@ -1,6 +1,9 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/decorator/decorator-3.0.1.ebuild,v 1.1 2009/03/27 11:41:12 bicatali Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/decorator/decorator-3.0.1.ebuild,v 1.4 2009/08/08 00:55:22 arfrever Exp $
+
+EAPI="2"
+SUPPORT_PYTHON_ABIS="1"
 
 inherit distutils
 
@@ -13,18 +16,34 @@ SLOT="0"
 KEYWORDS="~amd64-linux ~x86-linux"
 IUSE="doc"
 
+DEPEND=""
+RDEPEND=""
+
+RESTRICT_PYTHON_ABIS="3*"
+
 DOCS="CHANGES.txt README.txt"
 
 src_test() {
-	# multiprocessing only in python-2.6 and above, and not use anyway
+	# multiprocessing module is available only in Python >=2.6, and isn't used anyway.
 	sed -i -e '/multiprocessing/d' documentation.py || die
-	PYTHONPATH=build/lib "${python}" documentation.py || die "tests failed"
+	testing() {
+		PYTHONPATH="build-${PYTHON_ABI}/lib" "$(PYTHON)" documentation.py
+	}
+	python_execute_function testing
 }
 
 src_install() {
 	distutils_src_install
-	if use doc;then
+	if use doc; then
 	   dodoc documentation.pdf || die "dodoc pdf doc failed"
 	   dohtml documentation.html || die "dohtml html doc failed"
 	fi
+}
+
+pkg_postinst() {
+	python_mod_optimize decorator.py
+}
+
+pkg_postrm() {
+	python_mod_cleanup
 }
