@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/decorator
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/decorator/ChangeLog,v 1.5 2009/05/22 21:00:21 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/decorator/ChangeLog,v 1.6 2009/08/04 23:50:40 arfrever Exp $
+
+  04 Aug 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  decorator-3.0.1.ebuild:
+  Set SUPPORT_PYTHON_ABIS.
 
   22 May 2009; Patrick Lauer <patrick@gentoo.org> decorator-2.3.2.ebuild:
   SRC_URI fix for 2.3.2, fixes #269086
